# box_detection

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Data/: 1.json  2.json  3.json
src/cpp/: main.cpp
src/cpp/core/: BoxSegmenter.cpp  BoxSegmenter.h
src/cpp/core/box/: Box.cpp  Box.h
src/cpp/core/cluster/: Cluster.cpp  Cluster.h  ClustersProcessor.cpp  ClustersProcessor.h
src/cpp/core/detector/: BoxDetector.cpp  BoxDetector.h
src/cpp/core/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/cpp/utils/: colors.h  utils.cpp  utils.h
src/python/: dataset.py  model.py  pkl_to_bin.py  train.py  utils.py
